[package]
name = "ngram_trie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
hashbrown = { version = "0.14.5", features = ["serde"] }
fxhash = "0.2.1"